# elocal

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.in  elocal.spec.in
doc/: Makefile.am  serial_elo_example.txt  usb_elo_example.txt
elocal/: Makefile.am  elocal.cpp  elocal.h
elomon/: Makefile.am  elomon.cpp  elomon.h
lib/: Makefile.am  elo_driver.cpp  elo_driver.h  rttydevice.cpp  rttydevice.h  touchevent.cpp  touchevent.h
